--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "eslint-config-prettier": "^8.8.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-hook-form": "^7.44.3",
+    "typescript": "5.1.3",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/yup": "^0.32.0",
+    "prettier": "^2.8.8"
   }
 }
